[gd_scene load_steps=2 format=3 uid="uid://dq0htwu4mlmi3"]

[ext_resource type="Script" path="res://WindArea.gd" id="1_xv65d"]

[node name="WindArea" type="Area2D"]
script = ExtResource("1_xv65d")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
